Fixed z-index issue

--- a/app/assets/scss/components/_day.scss
+++ b/app/assets/scss/components/_day.scss
@@ -19,6 +19,7 @@
 
 	position: sticky;
 	top: 0;
+	z-index: 1;
 
 	& {
 		display: flex;
@@ -37,6 +38,9 @@
 	grid-template-columns: minmax(0, 1fr);
 	gap: spacing.$md;
 	padding-top: spacing.$md;
+
+	// Create a stacking context to ensure body content doesn't break out in front of the summary
+	isolation: isolate;
 }
 
 .day__heading {
